// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`session planner — representative snapshots > arm-side-thickness / legs 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 1,
      "targetIds": [
        "gastrocnemius",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "gluteus-maximus",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "hamstrings",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "obliques",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "quads",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": null,
    "legExerciseShareMax": 5,
    "maxExercises": 8,
    "maxTargets": 5,
  },
  "flexExerciseSlots": 1,
  "identityMinimum": {
    "coveringTargetIds": [
      "gastrocnemius",
      "gluteus-maximus",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "legs",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 2,
    "exerciseSlots": 7,
    "legExerciseSlots": 5,
    "targetSlots": 5,
  },
  "targets": [
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "adductors",
      "max": 0,
      "min": 4,
      "rank": 0,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "single-leg-calf-raise:2",
        "standing-calf-raise:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gastrocnemius",
      "max": 3,
      "min": 2,
      "rank": 1,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "bulgarian-split-squat-hip-dominant:3",
        "cable-kickback-glute:2",
        "hip-thrust:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gluteus-maximus",
      "max": 6,
      "min": 3,
      "rank": 2,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "lying-leg-curl:2",
        "romanian-deadlift:3",
        "seated-leg-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "hamstrings",
      "max": 5,
      "min": 3,
      "rank": 3,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "back-squat:3",
        "bulgarian-split-squat-knee-dominant:3",
        "leg-extension:2",
        "leg-press:3",
        "reverse-nordic-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "quads",
      "max": 8,
      "min": 4,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "hip-abduction:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gluteus-medius-minimus",
      "max": 2,
      "min": 1,
      "rank": 5,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "seated-calf-raise:3",
        "single-leg-calf-raise:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "soleus",
      "max": 3,
      "min": 2,
      "rank": 6,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 7,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > arm-side-thickness / pull 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 2,
      "targetIds": [
        "back-thickness",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "biceps",
        "brachialis-arm-thickness",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "forearm-extensors",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "forearm-flexors",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "lat-width",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "rear-delt",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 0,
  "identityMinimum": {
    "coveringTargetIds": [
      "brachialis-arm-thickness",
      "back-thickness",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "pull",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 0,
    "exerciseSlots": 10,
    "legExerciseSlots": 0,
    "targetSlots": 7,
  },
  "targets": [
    {
      "candidates": [
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "brachialis-arm-thickness",
      "max": 4,
      "min": 2,
      "rank": 0,
      "reserved": 1,
      "sharedWith": [],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [
        "barbell-dumbbell-shrug:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-traps",
      "max": 2,
      "min": 4,
      "rank": 1,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "back-thickness",
      "max": 8,
      "min": 4,
      "rank": 2,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "face-pull:2",
        "rear-delt-row:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rear-delt",
      "max": 4,
      "min": 4,
      "rank": 3,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "barbell-ez-bar-curl:3",
        "hammer-curl:2",
        "incline-dumbbell-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "biceps",
      "max": 5,
      "min": 3,
      "rank": 4,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
        "straight-arm-pulldown:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "lat-width",
      "max": 8,
      "min": 4,
      "rank": 5,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "reverse-curl:2",
        "reverse-wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-extensors",
      "max": 4,
      "min": 2,
      "rank": 6,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-flexors",
      "max": 2,
      "min": 2,
      "rank": 7,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 9,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > arm-side-thickness / push 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 3,
      "targetIds": [
        "lower-pec",
        "mid-pec",
        "upper-pec",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "obliques",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "side-delt",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "triceps",
        "triceps-long-head",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 1,
  "identityMinimum": {
    "coveringTargetIds": [
      "triceps",
      "lower-pec",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "push",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 2,
    "exerciseSlots": 9,
    "legExerciseSlots": 0,
    "targetSlots": 7,
  },
  "targets": [
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "cable-pushdown:2",
        "close-grip-bench-press:3",
        "dip-triceps-biased:3",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "triceps",
      "max": 12,
      "min": 4,
      "rank": 0,
      "reserved": 2,
      "sharedWith": [
        "triceps-long-head",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "front-delt",
      "max": 0,
      "min": 4,
      "rank": 1,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "dip-chest-biased:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "lower-pec",
      "max": 2,
      "min": 2,
      "rank": 2,
      "reserved": 1,
      "sharedWith": [
        "mid-pec",
        "upper-pec",
      ],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "cable-lateral-raise:2",
        "dumbbell-lateral-raise:3",
        "machine-lateral-raise:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "side-delt",
      "max": 7,
      "min": 4,
      "rank": 3,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "cable-fly:2",
        "flat-barbell-bench-press:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "mid-pec",
      "max": 5,
      "min": 3,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [
        "lower-pec",
        "upper-pec",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "triceps-long-head",
      "max": 2,
      "min": 1,
      "rank": 5,
      "reserved": 1,
      "sharedWith": [
        "triceps",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "incline-barbell-press:3",
        "incline-dumbbell-fly:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "upper-pec",
      "max": 5,
      "min": 3,
      "rank": 6,
      "reserved": 2,
      "sharedWith": [
        "lower-pec",
        "mid-pec",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 7,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > arm-side-thickness / upper 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 2,
      "targetIds": [
        "back-thickness",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "biceps",
        "brachialis-arm-thickness",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "lower-pec",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "mid-pec",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "rear-delt",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "triceps",
        "triceps-long-head",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 0,
  "identityMinimum": {
    "coveringTargetIds": [
      "brachialis-arm-thickness",
      "triceps",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "upper",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 0,
    "exerciseSlots": 10,
    "legExerciseSlots": 0,
    "targetSlots": 8,
  },
  "targets": [
    {
      "candidates": [
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "brachialis-arm-thickness",
      "max": 4,
      "min": 2,
      "rank": 0,
      "reserved": 1,
      "sharedWith": [],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "cable-pushdown:2",
        "close-grip-bench-press:3",
        "dip-triceps-biased:3",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "triceps",
      "max": 12,
      "min": 4,
      "rank": 1,
      "reserved": 2,
      "sharedWith": [
        "triceps-long-head",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "front-delt",
      "max": 0,
      "min": 4,
      "rank": 2,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "barbell-dumbbell-shrug:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-traps",
      "max": 2,
      "min": 4,
      "rank": 3,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "back-thickness",
      "max": 8,
      "min": 4,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "dip-chest-biased:2",
      ],
      "excluded": [
        "cable-fly",
      ],
      "extra": 0,
      "id": "lower-pec",
      "max": 2,
      "min": 1,
      "rank": 5,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "face-pull:2",
        "rear-delt-row:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rear-delt",
      "max": 4,
      "min": 4,
      "rank": 6,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "barbell-ez-bar-curl:3",
        "hammer-curl:2",
        "incline-dumbbell-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "biceps",
      "max": 5,
      "min": 3,
      "rank": 7,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
        "straight-arm-pulldown:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "lat-width",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "flat-barbell-bench-press:3",
      ],
      "excluded": [
        "cable-fly",
      ],
      "extra": 0,
      "id": "mid-pec",
      "max": 3,
      "min": 3,
      "rank": 9,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-lateral-raise:2",
        "dumbbell-lateral-raise:3",
        "machine-lateral-raise:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "side-delt",
      "max": 7,
      "min": 4,
      "rank": 10,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "triceps-long-head",
      "max": 2,
      "min": 1,
      "rank": 11,
      "reserved": 1,
      "sharedWith": [
        "triceps",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "incline-barbell-press:3",
        "incline-dumbbell-fly:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-pec",
      "max": 5,
      "min": 3,
      "rank": 12,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "reverse-curl:2",
        "reverse-wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-extensors",
      "max": 4,
      "min": 2,
      "rank": 13,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-flexors",
      "max": 2,
      "min": 2,
      "rank": 14,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 15,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 16,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > triceps-back-depth / legs 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 1,
      "targetIds": [
        "gastrocnemius",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "gluteus-maximus",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "hamstrings",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "obliques",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "quads",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": null,
    "legExerciseShareMax": 5,
    "maxExercises": 8,
    "maxTargets": 5,
  },
  "flexExerciseSlots": 1,
  "identityMinimum": {
    "coveringTargetIds": [
      "gastrocnemius",
      "gluteus-maximus",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "legs",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 2,
    "exerciseSlots": 7,
    "legExerciseSlots": 5,
    "targetSlots": 5,
  },
  "targets": [
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "adductors",
      "max": 0,
      "min": 4,
      "rank": 0,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "single-leg-calf-raise:2",
        "standing-calf-raise:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gastrocnemius",
      "max": 3,
      "min": 2,
      "rank": 1,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "bulgarian-split-squat-hip-dominant:3",
        "cable-kickback-glute:2",
        "hip-thrust:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gluteus-maximus",
      "max": 6,
      "min": 3,
      "rank": 2,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "lying-leg-curl:2",
        "romanian-deadlift:3",
        "seated-leg-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "hamstrings",
      "max": 5,
      "min": 3,
      "rank": 3,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "back-squat:3",
        "bulgarian-split-squat-knee-dominant:3",
        "leg-extension:2",
        "leg-press:3",
        "reverse-nordic-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "quads",
      "max": 8,
      "min": 4,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "hip-abduction:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "gluteus-medius-minimus",
      "max": 2,
      "min": 1,
      "rank": 5,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "seated-calf-raise:3",
        "single-leg-calf-raise:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "soleus",
      "max": 3,
      "min": 2,
      "rank": 6,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 7,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > triceps-back-depth / pull 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 2,
      "targetIds": [
        "back-thickness",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "biceps",
        "brachialis-arm-thickness",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "forearm-extensors",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "forearm-flexors",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "lat-width",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "rear-delt",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 0,
  "identityMinimum": {
    "coveringTargetIds": [
      "back-thickness",
      "biceps",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "pull",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 0,
    "exerciseSlots": 10,
    "legExerciseSlots": 0,
    "targetSlots": 7,
  },
  "targets": [
    {
      "candidates": [
        "barbell-dumbbell-shrug:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-traps",
      "max": 2,
      "min": 4,
      "rank": 0,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "back-thickness",
      "max": 8,
      "min": 4,
      "rank": 1,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "barbell-ez-bar-curl:3",
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
        "incline-dumbbell-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "biceps",
      "max": 5,
      "min": 3,
      "rank": 2,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "face-pull:2",
        "rear-delt-row:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rear-delt",
      "max": 4,
      "min": 4,
      "rank": 3,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "brachialis-arm-thickness",
      "max": 2,
      "min": 1,
      "rank": 4,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
        "straight-arm-pulldown:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "lat-width",
      "max": 8,
      "min": 4,
      "rank": 5,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "reverse-curl:2",
        "reverse-wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-extensors",
      "max": 4,
      "min": 2,
      "rank": 6,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-flexors",
      "max": 2,
      "min": 2,
      "rank": 7,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 9,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > triceps-back-depth / push 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 3,
      "targetIds": [
        "lower-pec",
        "mid-pec",
        "upper-pec",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "obliques",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "side-delt",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "triceps",
        "triceps-long-head",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 1,
  "identityMinimum": {
    "coveringTargetIds": [
      "triceps",
      "triceps-long-head",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "push",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 2,
    "exerciseSlots": 9,
    "legExerciseSlots": 0,
    "targetSlots": 7,
  },
  "targets": [
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "cable-pushdown:2",
        "close-grip-bench-press:3",
        "dip-triceps-biased:3",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "triceps",
      "max": 12,
      "min": 4,
      "rank": 0,
      "reserved": 2,
      "sharedWith": [
        "triceps-long-head",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "triceps-long-head",
      "max": 4,
      "min": 2,
      "rank": 1,
      "reserved": 1,
      "sharedWith": [
        "triceps",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "front-delt",
      "max": 0,
      "min": 4,
      "rank": 2,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "dip-chest-biased:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "lower-pec",
      "max": 2,
      "min": 1,
      "rank": 3,
      "reserved": 1,
      "sharedWith": [
        "mid-pec",
        "upper-pec",
      ],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "cable-lateral-raise:2",
        "dumbbell-lateral-raise:3",
        "machine-lateral-raise:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "side-delt",
      "max": 7,
      "min": 4,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "cable-fly:2",
        "flat-barbell-bench-press:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "mid-pec",
      "max": 5,
      "min": 3,
      "rank": 5,
      "reserved": 2,
      "sharedWith": [
        "lower-pec",
        "upper-pec",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "incline-barbell-press:3",
        "incline-dumbbell-fly:2",
      ],
      "excluded": [],
      "extra": 1,
      "id": "upper-pec",
      "max": 5,
      "min": 3,
      "rank": 6,
      "reserved": 2,
      "sharedWith": [
        "lower-pec",
        "mid-pec",
      ],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 7,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 8,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;

exports[`session planner — representative snapshots > triceps-back-depth / upper 1`] = `
{
  "capacityGroups": [
    {
      "exerciseSlots": 2,
      "targetIds": [
        "back-thickness",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "biceps",
        "brachialis-arm-thickness",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "lower-pec",
      ],
    },
    {
      "exerciseSlots": 1,
      "targetIds": [
        "mid-pec",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "rear-delt",
      ],
    },
    {
      "exerciseSlots": 2,
      "targetIds": [
        "triceps",
        "triceps-long-head",
      ],
    },
  ],
  "caps": {
    "absExerciseShareMax": 2,
    "legExerciseShareMax": null,
    "maxExercises": 10,
    "maxTargets": 8,
  },
  "flexExerciseSlots": 0,
  "identityMinimum": {
    "coveringTargetIds": [
      "triceps",
      "triceps-long-head",
    ],
    "requiredTargets": 2,
    "satisfied": true,
  },
  "purpose": "upper",
  "refusals": [],
  "reserved": {
    "absExerciseSlots": 0,
    "exerciseSlots": 10,
    "legExerciseSlots": 0,
    "targetSlots": 8,
  },
  "targets": [
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "cable-pushdown:2",
        "close-grip-bench-press:3",
        "dip-triceps-biased:3",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "triceps",
      "max": 12,
      "min": 4,
      "rank": 0,
      "reserved": 2,
      "sharedWith": [
        "triceps-long-head",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [
        "cable-overhead-extension-leaning-forward:2",
        "overhead-triceps-extension:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "triceps-long-head",
      "max": 4,
      "min": 2,
      "rank": 1,
      "reserved": 1,
      "sharedWith": [
        "triceps",
      ],
      "status": "required",
      "tier": "goal",
    },
    {
      "candidates": [],
      "excluded": [],
      "extra": 0,
      "id": "front-delt",
      "max": 0,
      "min": 4,
      "rank": 2,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "barbell-dumbbell-shrug:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-traps",
      "max": 2,
      "min": 4,
      "rank": 3,
      "reserved": 0,
      "sharedWith": [],
      "status": "infeasible",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
      ],
      "excluded": [],
      "extra": 0,
      "id": "back-thickness",
      "max": 8,
      "min": 4,
      "rank": 4,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "dip-chest-biased:2",
      ],
      "excluded": [
        "cable-fly",
      ],
      "extra": 0,
      "id": "lower-pec",
      "max": 2,
      "min": 1,
      "rank": 5,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "face-pull:2",
        "rear-delt-row:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rear-delt",
      "max": 4,
      "min": 4,
      "rank": 6,
      "reserved": 2,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity_primary",
    },
    {
      "candidates": [
        "barbell-ez-bar-curl:3",
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
        "incline-dumbbell-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "biceps",
      "max": 5,
      "min": 3,
      "rank": 7,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cross-body-hammer-curl:2",
        "hammer-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "brachialis-arm-thickness",
      "max": 2,
      "min": 1,
      "rank": 8,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "chest-supported-row:3",
        "lat-pulldown-wide-pronated:3",
        "seated-cable-row:3",
        "straight-arm-pulldown:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "lat-width",
      "max": 8,
      "min": 4,
      "rank": 9,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "flat-barbell-bench-press:3",
      ],
      "excluded": [
        "cable-fly",
      ],
      "extra": 0,
      "id": "mid-pec",
      "max": 3,
      "min": 3,
      "rank": 10,
      "reserved": 1,
      "sharedWith": [],
      "status": "selected",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-lateral-raise:2",
        "dumbbell-lateral-raise:3",
        "machine-lateral-raise:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "side-delt",
      "max": 7,
      "min": 4,
      "rank": 11,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "cable-fly:2",
        "incline-barbell-press:3",
        "incline-dumbbell-fly:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "upper-pec",
      "max": 5,
      "min": 3,
      "rank": 12,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "identity",
    },
    {
      "candidates": [
        "reverse-curl:2",
        "reverse-wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-extensors",
      "max": 4,
      "min": 2,
      "rank": 13,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "wrist-curl:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "forearm-flexors",
      "max": 2,
      "min": 2,
      "rank": 14,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "obliques",
      "max": 8,
      "min": 4,
      "rank": 15,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
    {
      "candidates": [
        "cable-crunch:3",
        "cable-woodchop:2",
        "hanging-knee-leg-raise:3",
        "pallof-press:2",
      ],
      "excluded": [],
      "extra": 0,
      "id": "rectus-abdominis",
      "max": 8,
      "min": 4,
      "rank": 16,
      "reserved": 0,
      "sharedWith": [],
      "status": "deferred",
      "tier": "accessory",
    },
  ],
}
`;
